<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/AppTheme.AppBarOverlay"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_about"
        android:layout_margin="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/edit_txt_song_name"
                        android:hint="@string/song_name"
                        android:layout_height="match_parent" />

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/edit_text_artist_name"
                        android:hint="@string/artist_name"
                        android:layout_marginBottom="10dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btn_song_request"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btn_label_song_req_submit"
                        android:textAllCaps="false"
                        android:padding="2dp"
                        android:textColor="@color/white"
                        android:background="@color/colorPrimary"
                        />


                </LinearLayout>

            <!--</android.support.v7.widget.CardView>-->


        </LinearLayout>

    </ScrollView>

</RelativeLayout>